# DjangoProgect

./: .env.example  README.md  category_fixture.json  product_fixture.json  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: base.html  post_confirm_delete.html  post_detail.html  post_form.html  post_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_category.py  add_product.py
catalog/migrations/: 0001_initial.py  0002_alter_product_category.py  0003_alter_product_image.py  0004_alter_product_image_alter_product_price.py  0005_alter_product_category.py  0006_alter_product_options_product_is_published_and_more.py
catalog/templates/: base.html  contacts.html  header.html  home.html  product_detail.html  product_list.html
catalog/templates/catalog/: base.html  category_products.html  contacts.html  footer.html  header.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: create_moderator_group.py
users/migrations/: 0001_initial.py  0002_alter_customuser_managers.py
users/templates/users/: delete_account.html  edit_profile.html  login.html  register.html
